--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FarmFresh - Organic Farm Website Template</title>
+    <title>Ostia - Fresh Vegetables and Premium Meats, Unforgettable Flavorful Offerings.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Ostia - Fresh Vegetables and Premium Meats, Unforgettable Flavorful Offerings." name="keywords">
+    <meta content="Ostia - Fresh Vegetables and Premium Meats, Unforgettable Flavorful Offerings." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -36,13 +36,13 @@
             <div class="col-lg-3">
                 <div class="d-flex align-items-center justify-content-start">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-2"></i>
-                    <h2 class="mb-0">+012 345 6789</h2>
+                    <h2 class="mb-0 nowrap">+255 782 818218</h2>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="d-flex align-items-center justify-content-center">
                     <a href="index.html" class="navbar-brand ms-lg-5">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Farm</span>Fresh</h1>
+            <img src="img/logo-V2-wide.png" alt="">
                     </a>
                 </div>
             </div>
@@ -62,7 +62,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-primary navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex d-lg-none">
-            <h1 class="m-0 display-4 text-secondary"><span class="text-white">Farm</span>Fresh</h1>
+            <img src="img/logo-V2-wide.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -333,15 +333,16 @@
                             <h4 class="text-white mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-white me-2"></i>
-                                <p class="text-white mb-0">123 Street, New York, USA</p>
+                                <p class="text-white mb-0">123 Mafia Street, Sinza Dar es salaam, TZ</p>
+
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
-                                <p class="text-white mb-0">info@example.com</p>
+                                <p class="text-white mb-0">info@ostiafarms.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-white me-2"></i>
-                                <p class="text-white mb-0">+012 345 67890</p>
+                                <p class="text-white mb-0">+255 782 8182180</p>
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -375,24 +376,24 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
+                    <!-- <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
                         <h4 class="text-white">Newsletter</h4>
                         <h6 class="text-white">Subscribe Our Newsletter</h6>
                         <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
-                        <form action="">
+                                            <form action="https://mailthis.to/infoAlpha" method="POST">
                             <div class="input-group">
                                 <input type="text" class="form-control border-white p-3" placeholder="Your Email">
                                 <button class="btn btn-primary">Sign Up</button>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="https://htmlcodex.com">HTML Codex</a></p>
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">Ostia</a>. All Rights Reserved.</p>
         </div>
     </div>
     <!-- Footer End -->
