--- a/product.html
+++ b/product.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FarmFresh - Organic Farm Website Template</title>
+    <title>Ostia - Fresh Vegetables and Premium Meats, Unforgettable Flavorful Offerings.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Ostia - Fresh Vegetables and Premium Meats, Unforgettable Flavorful Offerings." name="keywords">
+    <meta content="Ostia - Fresh Vegetables and Premium Meats, Unforgettable Flavorful Offerings." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -36,13 +36,13 @@
             <div class="col-lg-3">
                 <div class="d-flex align-items-center justify-content-start">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-2"></i>
-                    <h2 class="mb-0">+012 345 6789</h2>
+                    <h2 class="mb-0 nowrap">+255 782 818218</h2>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="d-flex align-items-center justify-content-center">
                     <a href="index.html" class="navbar-brand ms-lg-5">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Farm</span>Fresh</h1>
+            <img src="img/logo-V2-wide.png" alt="">
                     </a>
                 </div>
             </div>
@@ -62,7 +62,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-primary navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex d-lg-none">
-            <h1 class="m-0 display-4 text-secondary"><span class="text-white">Farm</span>Fresh</h1>
+            <img src="img/logo-V2-wide.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -71,9 +71,9 @@
             <div class="navbar-nav mx-auto py-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
-                <a href="product.html" class="nav-item nav-link active">Product</a>
-                <div class="nav-item dropdown">
+                <!-- <a href="service.html" class="nav-item nav-link">Service</a> -->
+                <a href="product.html" class="nav-item nav-link active">Products</a>
+                <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
                         <a href="blog.html" class="dropdown-item">Blog Grid</a>
@@ -82,7 +82,7 @@
                         <a href="team.html" class="dropdown-item">The Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
-                </div>
+                </div> -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -96,8 +96,8 @@
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
                     <h1 class="display-1 text-white mb-md-4">Our Products</h1>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Home</a>
-                    <a href="" class="btn btn-secondary py-md-3 px-md-5">Products</a>
+                    <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Home</a> -->
+                    <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5">Products</a> -->
                 </div>
             </div>
         </div>
@@ -109,63 +109,64 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="mx-auto text-center mb-5" style="max-width: 500px;">
-                <h6 class="text-primary text-uppercase">Products</h6>
-                <h1 class="display-5">Our Fresh & Organic Products</h1>
+                <!-- <h6 class="text-primary text-uppercase">Our Products</h6> -->
+                <!-- <h1 class="display-5">Our Products</h1> -->
             </div>
-            <div class="owl-carousel product-carousel px-5">
-                <div class="pb-5">
-                    <div class="product-item position-relative bg-white d-flex flex-column text-center">
-                        <img class="img-fluid mb-4" src="img/product-1.png" alt="">
-                        <h6 class="mb-3">Organic Vegetable</h6>
-                        <h5 class="text-primary mb-0">$19.00</h5>
-                        <div class="btn-action d-flex justify-content-center">
-                            <a class="btn bg-primary py-2 px-3" href=""><i class="bi bi-cart text-white"></i></a>
-                            <a class="btn bg-secondary py-2 px-3" href=""><i class="bi bi-eye text-white"></i></a>
-                        </div>
+            <div class="row g-5">
+                <div class="col-lg-4">
+                    <div class="blog-item position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/product-1.png" alt="">
+                        <a class="blog-overlay" href="">
+                            <h4 class="text-white">Chinese Cabbage</h4>
+                            <span class="text-white fw-bold">TZS 12,000</span>
+                        </a>
                     </div>
                 </div>
-                <div class="pb-5">
-                    <div class="product-item position-relative bg-white d-flex flex-column text-center">
-                        <img class="img-fluid mb-4" src="img/product-2.png" alt="">
-                        <h6 class="mb-3">Organic Vegetable</h6>
-                        <h5 class="text-primary mb-0">$19.00</h5>
-                        <div class="btn-action d-flex justify-content-center">
-                            <a class="btn bg-primary py-2 px-3" href=""><i class="bi bi-cart text-white"></i></a>
-                            <a class="btn bg-secondary py-2 px-3" href=""><i class="bi bi-eye text-white"></i></a>
-                        </div>
+                <div class="col-lg-4">
+                    <div class="blog-item position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/product-2.png" alt="">
+                        <a class="blog-overlay" href="">
+                            <h4 class="text-white">Beef</h4>
+                            <span class="text-white fw-bold">TZS 15,000</span>
+                        </a>
                     </div>
                 </div>
-                <div class="pb-5">
-                    <div class="product-item position-relative bg-white d-flex flex-column text-center">
-                        <img class="img-fluid mb-4" src="img/product-1.png" alt="">
-                        <h6 class="mb-3">Organic Vegetable</h6>
-                        <h5 class="text-primary mb-0">$19.00</h5>
-                        <div class="btn-action d-flex justify-content-center">
-                            <a class="btn bg-primary py-2 px-3" href=""><i class="bi bi-cart text-white"></i></a>
-                            <a class="btn bg-secondary py-2 px-3" href=""><i class="bi bi-eye text-white"></i></a>
-                        </div>
+                <div class="col-lg-4">
+                    <div class="blog-item position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/product-3.png" alt="">
+                        <a class="blog-overlay" href="">
+                            <h4 class="text-white">Chicken</h4>
+                            <span class="text-white fw-bold">TZS 24,000</span>
+                        </a>
                     </div>
                 </div>
-                <div class="pb-5">
-                    <div class="product-item position-relative bg-white d-flex flex-column text-center">
-                        <img class="img-fluid mb-4" src="img/product-2.png" alt="">
-                        <h6 class="mb-3">Organic Vegetable</h6>
-                        <h5 class="text-primary mb-0">$19.00</h5>
-                        <div class="btn-action d-flex justify-content-center">
-                            <a class="btn bg-primary py-2 px-3" href=""><i class="bi bi-cart text-white"></i></a>
-                            <a class="btn bg-secondary py-2 px-3" href=""><i class="bi bi-eye text-white"></i></a>
-                        </div>
+                <div class="col-lg-4">
+                    <div class="blog-item position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/product-4.png" alt="">
+                        <a class="blog-overlay" href="">
+                            <h4 class="text-white">Japanese beef</h4>
+                            <span class="text-white fw-bold">TZS 50,000</span>
+                        </a>
                     </div>
                 </div>
-                <div class="pb-5">
-                    <div class="product-item position-relative bg-white d-flex flex-column text-center">
-                        <img class="img-fluid mb-4" src="img/product-1.png" alt="">
-                        <h6 class="mb-3">Organic Vegetable</h6>
-                        <h5 class="text-primary mb-0">$19.00</h5>
-                        <div class="btn-action d-flex justify-content-center">
-                            <a class="btn bg-primary py-2 px-3" href=""><i class="bi bi-cart text-white"></i></a>
-                            <a class="btn bg-secondary py-2 px-3" href=""><i class="bi bi-eye text-white"></i></a>
-                        </div>
+
+                <div class="col-lg-4">
+                    <div class="blog-item position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/product-5.png" alt="">
+                        <a class="blog-overlay" href="">
+                            <h4 class="text-white"> Onions</h4>
+                            <span class="text-white fw-bold">23,000</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="blog-item position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/product-6.png" alt="">
+                        <a class="blog-overlay" href="">
+                            <h4 class="text-white">Tomatoes</h4>
+                            <span class="text-white fw-bold">12,000</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -236,15 +237,16 @@
                             <h4 class="text-white mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-white me-2"></i>
-                                <p class="text-white mb-0">123 Street, New York, USA</p>
+                                <p class="text-white mb-0">123 Mafia Street, Sinza Dar es salaam, TZ</p>
+
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-white me-2"></i>
-                                <p class="text-white mb-0">info@example.com</p>
+                                <p class="text-white mb-0">info@ostiafarms.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-white me-2"></i>
-                                <p class="text-white mb-0">+012 345 67890</p>
+                                <p class="text-white mb-0">+255 782 8182180</p>
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-secondary btn-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -278,24 +280,24 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
+                    <!-- <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5">
                         <h4 class="text-white">Newsletter</h4>
                         <h6 class="text-white">Subscribe Our Newsletter</h6>
                         <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
-                        <form action="">
+                                            <form action="https://mailthis.to/infoAlpha" method="POST">
                             <div class="input-group">
                                 <input type="text" class="form-control border-white p-3" placeholder="Your Email">
                                 <button class="btn btn-primary">Sign Up</button>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="https://htmlcodex.com">HTML Codex</a></p>
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="#">Ostia</a>. All Rights Reserved.</p>
         </div>
     </div>
     <!-- Footer End -->
